--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -6,7 +6,9 @@
     name: nodejs
     state: installed
 
-
+- name: App Pre-requisites
+  ansible.builtin.import_tasks:
+    file: app_presetup.yml
 
 
 
