--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -10,13 +10,15 @@
   ansible.builtin.import_tasks:
     file: app_presetup.yml
 
+- name: Load NodeJS Dependencies
+  ansible.builtin.shell: npm install
+  args:
+    chdir: /app
+
+- name: SystemD Setup
+  ansible.builtin.import_tasks:
+    file: systemd_setup.yml
 
 
 
-#  app_presetup
-#
-#  echo -e "${color} Install NodeJS Dependencies${nocolor}"
-#  npm install  &>>$log_file
-#  stat_check $?
-#
-#  systemd_setup
+
