--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,3 +3,8 @@
     name: common
     tasks_from: nodejs
 
+- name: Load Schema Setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: mongo_schema_setup
+
