--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -23,6 +23,7 @@
   ansible.builtin.yum:
     name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
     state: installed
+    disable_gpg_check: true
 
 - name: Install Redis
   ansible.builtin.dnf:
