--- a/roles/common/tasks/mysql_schema_setup.yml
+++ b/roles/common/tasks/mysql_schema_setup.yml
@@ -4,7 +4,7 @@
     state: installed
 
 - name: Load Schema
-  ansible.builtin.shell: mysql -h mysql-dev.devopsb73.store -uroot -pRoboShop@1 </app/schema/{{ component }}.js
+  ansible.builtin.shell: mysql -h mysql-dev.devopsb73.store -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
 
 
 
