--- a/roles/user/files/user.service
+++ b/roles/user/files/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis-dev.devopsb73.store
-Environment=MONGO_URL="mongodb://mongodb-dev.devopsb73.store:27017/users"
+Environment=REDIS_HOST=redis-{{env}}.devopsb73.store
+Environment=MONGO_URL="mongodb://mongodb-{{env}}.devopsb73.store:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
