--- a/roles/catalogue/templates/catalogue.service
+++ b/roles/catalogue/templates/catalogue.service
@@ -4,7 +4,7 @@ Description = Catalogue Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb-dev.devopsb73.store:27017/catalogue"
+Environment=MONGO_URL="mongodb://mongodb-dev.rdevopsb73.online:27017/catalogue"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 
