--- a/roles/user/templates/user.service
+++ b/roles/user/templates/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis-{{env}}.devopsb73.store
-Environment=MONGO_URL="mongodb://mongodb-{{env}}.devopsb73.store:27017/users"
+Environment=REDIS_HOST=redis-{{env}}.rdevopsb73.online
+Environment=MONGO_URL="mongodb://mongodb-{{env}}.rdevopsb73.online:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
