--- a/roles/common/tasks/mongo_schema_setup.yml
+++ b/roles/common/tasks/mongo_schema_setup.yml
@@ -9,7 +9,7 @@
     state: installed
 
 - name: Load Schema
-  ansible.builtin.shell: mongo --host mongodb-dev.devopsb73.store </app/schema/{{ component }}.js
+  ansible.builtin.shell: mongo --host mongodb-dev.rdevopsb73.online </app/schema/{{ component }}.js
 
 
 
