--- a/roles/catalogue/templates/catalogue.service
+++ b/roles/catalogue/templates/catalogue.service
@@ -3,8 +3,8 @@ Description = Catalogue Service
 
 [Service]
 User=roboshop
-Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb-dev.rdevopsb73.online:27017/catalogue"
+Environment=MONGO={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo', region='us-east-1') }}
+Environment=MONGO_URL={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo_url', region='us-east-1') }}
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 
