--- a/roles/user/templates/user.service
+++ b/roles/user/templates/user.service
@@ -2,9 +2,9 @@
 Description = User Service
 [Service]
 User=roboshop
-Environment=MONGO=true
-Environment=REDIS_HOST=redis-{{env}}.rdevopsb73.online
-Environment=MONGO_URL="mongodb://mongodb-{{env}}.rdevopsb73.online:27017/users"
+Environment=MONGO={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo', region='us-east-1') }}
+Environment=REDIS_HOST={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.redis_host', region='us-east-1') }}
+Environment=MONGO_URL={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo_url', region='us-east-1') }}
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
