--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -6,6 +6,12 @@ input {
 
 ## Filters
 
+filter {
+  grok {
+    match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_time:float}" }
+  }
+}
+
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
