--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -40,3 +40,8 @@
     name: elk
     tasks_from: filebeat
 
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
+
