--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -2,3 +2,9 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
+
+- name: Load Prometheus Node exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
+
