--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -32,5 +32,7 @@ scrape_configs:
           - name: "tag:Monitor"
             values: [ "true", "yes" ]
     relabel_configs:
-     - source_labels: [ __meta_ec2_tag_Name ]
-       target_label: component
+{% for item in tags %}
+     - source_labels: [ __meta_ec2_tag_{{item}} ]
+       target_label: {{item}}
+{% endfor %}
