--- a/roles/common/tasks/app_presetup.yml
+++ b/roles/common/tasks/app_presetup.yml
@@ -12,9 +12,15 @@
     path: /app
     state: directory
 
+#- name: Download and extract app content
+#  ansible.builtin.unarchive:
+#    src: https://roboshop-artifacts.s3.amazonaws.com/{{ component }}.zip
+#    dest: /app
+#    remote_src: yes
+
 - name: Download and extract app content
   ansible.builtin.unarchive:
-    src: https://roboshop-artifacts.s3.amazonaws.com/{{ component }}.zip
+    src: http://172.31.95.9:8081/repository/{{component}}/{{component}}-{{app_version}}.zip
     dest: /app
     remote_src: yes
 
