--- a/roles/common/tasks/app_presetup.yml
+++ b/roles/common/tasks/app_presetup.yml
@@ -20,7 +20,7 @@
 
 - name: Download and extract app content
   ansible.builtin.unarchive:
-    src: http://172.31.95.9:8081/repository/{{component}}/{{component}}-{{app_version}}.zip
+    src: http://{{ lookup('amazon.aws.aws_ssm', 'roboshop.nexus.username', region='us-east-1') }}:{{ lookup('amazon.aws.aws_ssm', 'roboshop.nexus.password', region='us-east-1') }}@172.31.95.9:8081/repository/{{component}}/{{component}}-{{app_version}}.zip
     dest: /app
     remote_src: yes
 
