--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -10,10 +10,11 @@
   ansible.builtin.import_tasks:
     file: app_presetup.yml
 
-- name: Load NodeJS Dependencies
-  ansible.builtin.shell: npm install
-  args:
-    chdir: /app
+# this step goes with CI
+#- name: Load NodeJS Dependencies
+#  ansible.builtin.shell: npm install
+#  args:
+#    chdir: /app
 
 - name: Download DocumentDB Pem file
   ansible.builtin.get_url:
