--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -15,6 +15,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[fields][component]}-%{+YYYY.MM.dd}"
+    #index => "%{[fields][component]}-%{+YYYY.MM.dd}"
+    index => "%{[kubernetes][container][name]}-%{+YYYY.MM.dd}"
   }
 }
